# vmex

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODEX_RESUME.md  LICENSE  PORTING_NOTES.md  README.md  codecov.yml  dcon_circular_tokamak.txt  discrete_adjoint_2506_plan.md  jxbout_circular_tokamak.nc  jxbout_nfp4_QH_warm_start.nc  mercier.nfp4_QH_warm_start  notes_r25_gradient_research.md  notes_r26g_redl_spec.md  notes_r26h_research_proposal.md  plan.md  plan_differentiability.md  plan_freeb.md  plan_mirror.md  plan_pre_vmex.md  plan_research_grade_performance_differentiability.md  pyproject.toml  timings.txt
.github/workflows/: ci.yml  gpu-ci.yml  publish-pypi.yml
benchmarks/: baseline.json  convergence_nfp4_ns51.json  device_parity.py  finite_beta_diagnostics_parity.json  free_boundary_essos_beta.json  free_boundary_essos_mgrid_parity.json  free_boundary_sensitivity.json  freeboundary_multigrid.json  gpu_baseline.json  make_readme_figures.py  mirror_fixed_boundary.json  mirror_fixed_boundary_implicit.json  mirror_free_boundary_axisymmetric.json  mirror_free_boundary_implicit.json  mirror_free_boundary_nonaxisymmetric.json  mirror_hybrid_balanced_continuation.json  mirror_hybrid_fixed_boundary.json  mirror_hybrid_free_boundary.json  mirror_m10_audit.json  mirror_performance.json  mirror_spline_fixed_boundary.json  profile.json  profile_high_resolution.py  profile_production.py  qi_compact.json  run_baseline.py  run_freeboundary_multigrid.py  run_gpu_matrix.py  run_mirror_exterior_endpoints.py
benchmarks/opt_decks/: input.qa_optimized  input.qa_seed  input.qh_optimized  input.qh_seed  input.qi_optimized  input.qi_seed  input.qp_optimized  state.qi_optimized.npz
docs/: accelerated_merge_readiness.rst  aggressive_performance_plan.rst  algorithms.md  algorithms.rst  architecture.rst  bootstrap_current_fixed_point.rst  cli.rst  code_structure.md  code_structure.rst  conf.py  confinement.rst  contributing.md  contributing.rst  discrete_adjoint.rst  equations.rst  free_boundary_coil_optimization.rst  free_boundary_plan.rst  functionality_matrix.rst  glossary.rst  index.md  index.rst  index_fast.rst  input_reference.rst  installation.md  installation.rst  jxbforce_mercier.rst  mirror_geometry.rst  objectives.rst  optimization.rst  optimization_sweep_results.rst  optional_validation_plan.rst  overview.md  overview.rst  parallelization.rst  performance.md  performance.rst  piecewise_omnigenous_plan.rst  quickstart.md  quickstart.rst  references.md  (+12 more)
examples/: 00_parse_and_boundary.py  01_grad_demo.py  02_init_guess_and_coords.py  03_grad_full_coords.py  04_geom_metrics.py  05_profiles_and_volume.py  06_field_and_energy.py  07_solve_lambda.py  08_solve_fixed_boundary.py  09_solve_fixed_boundary_lbfgs.py  README.md  bootstrap_current_fixed_point.py  finite_beta_scan.py  fixed_boundary_driver_tracks.py  fixed_boundary_run.py  free_boundary_beta_scan.py  free_boundary_direct_coil_derivative.py  free_boundary_direct_coils_forward.py  free_boundary_essos_coils.py  free_boundary_essos_coils_beta_scan.py  free_boundary_essos_coils_forward.py  free_boundary_essos_direct_forward.py  free_boundary_essos_example_common.py  free_boundary_essos_mgrid_forward.py  free_boundary_mgrid.py  free_boundary_tokamak_coils.py  hot_restart_scan.py  mirror_finite_current_pitch.py  mirror_fixed_boundary_gradients.py  mirror_fixed_boundary_nonaxisymmetric.py  mirror_fixed_boundary_solve_diagnostic.py  mirror_free_boundary_beta_scan.py  mirror_free_boundary_circular_coils.py  mirror_implicit_sensitivity.py  mirror_manufactured_fixed_boundary.py  mirror_residual_newton_convergence_grid.py  mirror_solver_comparison.py  mirror_two_coil_axisym.py  parallel_ensemble_scan.py  plot_and_boozer.py  (+15 more)
tests/: README.md  __init__.py  conftest.py  golden_digests.json  test_accelerated_scan_cache_probe.py  test_accepted_output_artifacts.py  test_augmented_lagrangian.py  test_baseline_benchmark.py  test_bcovar_lambda_axis_closure.py  test_bmag_parity.py  test_bootstrap.py  test_bootstrap_current_example.py  test_bootstrap_current_fixed_point.py  test_bootstrap_current_fixed_point_integration_optional.py  test_booz_cli.py  test_booz_input.py  test_boozer_tables.py  test_boundary_eval.py  test_boundary_field.py  test_bsup_parity.py  test_bundled_validation_asset_gates.py  test_c_kernels_axisym.py  test_chipf_inversion.py  test_chipf_mesh_convention.py  test_cli.py  test_cli_device.py  test_cli_freeboundary.py  test_cli_helpers.py  test_cli_vmec2000_exec.py  test_coils.py  test_compare_exact_path_profiles.py  test_compat.py  test_config_edges.py  test_constraint_pipeline.py  test_continuation_exact_history.py  test_continuation_stage_inputs.py  test_converged_wout_matrix_parity.py  test_converged_wout_parity_benchmark.py  test_coords_kernel.py  test_coverage_margin.py  (+354 more)
tools/: README.md  diagnose_input.py  fetch_assets.py  inspect_npz.py  make_golden_digests.py  profile_hotpaths.py  vmec2000_driver_probe.py  vmecpp_driver_probe.py
validation/: README.md  external_vmec_asset_manifest.toml  qi_seed_robustness_plan.py
vmec_jax/: README.md  __init__.py  __main__.py  _compat.py  _solve_runtime.py  api.py  bootstrap_current.py  booz.py  booz_input.py  boundary.py  cli.py  config.py  coords.py  diagnostics.py  discrete_adjoint.py  doctor.py  driver.py  driver_flux_helpers.py  driver_io_helpers.py  driver_output_helpers.py  driver_policy_helpers.py  driver_solve_helpers.py  energy.py  field.py  fieldlines.py  finite_beta.py  fourier.py  free_boundary.py  free_boundary_adjoint.py  free_boundary_adjoint_controller.py  free_boundary_adjoint_objective_helpers.py  free_boundary_adjoint_replay_plan_helpers.py  free_boundary_adjoint_trace_controls.py  free_boundary_adjoint_trace_metadata.py  free_boundary_adjoint_trace_stack.py  free_boundary_validation.py  geom.py  grids.py  implicit.py  implicit_adjoint_helpers.py  (+86 more)
vmec_jax_plan/: README.md  discrete_adjoint_2506_plan.md  plan.md  plan_differentiability.md  plan_freeb.md  plan_research_grade_performance_differentiability.md
vmex/: __init__.py  doctor.py
(+909 files in other folders)
