[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "vmec-jax"
version = "0.0.18"
description = "JAX implementation of VMEC2000 with differentiable fixed-boundary and branch-local free-boundary research paths."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "vmec_jax contributors"}]
license = "MIT"
keywords = ["vmec", "stellarator", "mhd", "jax", "optimization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy",
  "jax",
  "jaxlib",
  "scipy",
  "netCDF4",
  "matplotlib",
  "packaging",
  "booz_xform_jax",
  "tomli; python_version < '3.11'",
]

[project.scripts]
vmec = "vmec_jax.core.cli:main"
vmec-jax = "vmec_jax.core.cli:main"

[project.urls]
Homepage = "https://github.com/uwplasma/vmec_jax"
Documentation = "https://vmec-jax.readthedocs.io/en/latest/"
Repository = "https://github.com/uwplasma/vmec_jax"
Issues = "https://github.com/uwplasma/vmec_jax/issues"
Changelog = "https://github.com/uwplasma/vmec_jax/releases"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-copybutton",
  "furo",
]
dev = [
  "build",
  "furo",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "sphinx",
  "types-setuptools",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vmec_jax*"]
exclude = ["tests*", "docs*", "examples*", "tools*", "validation*", "results*", "build*", "dist*"]

[tool.setuptools.package-data]
vmec_jax = ["resources/input.nfp4_QH_warm_start"]

[tool.pytest.ini_options]
markers = [
  "full: slower/full-physics tests; set RUN_FULL=1 to run",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402: module-level import not at top-of-file.  Deferred imports (after env
#        setup / jax.config calls) are deliberate to control JAX initialisation.
# E501: line too long.  Handled by the line-length setting above; long lines in
#        ported Fortran-style code are acceptable.
# E702: semicolons as statement separators in tightly coupled numerical
#        kernels, common in ported Fortran code.
ignore = ["E402", "E501", "E702"]

[tool.mypy]
# Note: recent numpy stubs use PEP 695 `type` statements, so the checked
# python_version cannot be pinned below 3.12.
ignore_missing_imports = true
# With full defaults the core trips 38 errors in 11 files, all jax.Array /
# ndarray-typing false positives (mypy sees opaque jax.Array where numpy
# overloads are annotated).  Disabled codes shrunk from the legacy 14-code
# blanket to the 8 the core actually needs; name-defined, valid-type,
# call-arg, misc, type-arg, no-any-return and override are enabled again.
disable_error_code = ["operator", "union-attr", "assignment", "arg-type", "index", "return-value", "list-item", "attr-defined"]

[[tool.mypy.overrides]]
# TODO(optimize/implicit agent): one narrow error each —
#   core/implicit.py:629 [var-annotated] (_MASK_CACHE needs an annotation)
#   core/optimize.py:977 [dict-item] (heterogeneous dict literal)
module = ["vmec_jax.core.optimize", "vmec_jax.core.implicit"]
disable_error_code = ["var-annotated", "dict-item"]
