[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "vmex"
version = "0.3.0"
description = "JAX implementation of VMEC2000 with differentiable fixed-boundary and branch-local free-boundary research paths."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "vmex contributors"}]
license = "MIT"
keywords = ["vmec", "stellarator", "mhd", "jax", "optimization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy",
  "jax",
  "jaxlib",
  "scipy",
  "netCDF4",
  "matplotlib",
  "packaging",
  "booz_xform_jax",
  "solvax",
  "tomli; python_version < '3.11'",
]

[project.scripts]
vmex = "vmex.core.cli:main"
vmec = "vmex.core.cli:main"  # alias

[project.urls]
Homepage = "https://github.com/uwplasma/vmex"
Documentation = "https://vmex.readthedocs.io/en/latest/"
Repository = "https://github.com/uwplasma/vmex"
Issues = "https://github.com/uwplasma/vmex/issues"
Changelog = "https://github.com/uwplasma/vmex/releases"

[project.optional-dependencies]
# Differentiable free boundary via virtual casing (plan.md R15.3 + R19).
# ``virtual_casing_jax`` is a uwplasma package (https://github.com/uwplasma/
# virtual_casing_jax); it is NOT yet on PyPI, so ``pip install vmex[freeb]``
# will not resolve it from an index — install it editable alongside vmex:
#   pip install -e /path/to/virtual_casing_jax
# The ``vmex.core.freeboundary_diff`` module and its tests are gated behind an
# ``importorskip`` so CI stays green when the dependency is absent.
freeb = [
  "virtual_casing_jax",
]
docs = [
  "sphinx",
  "sphinx-copybutton",
  "furo",
]
dev = [
  "build",
  "furo",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "ruff<0.16",
  "sphinx",
  "types-setuptools",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vmex*", "vmec_jax"]
exclude = ["tests*", "docs*", "examples*", "tools*", "validation*", "results*", "build*", "dist*"]

[tool.setuptools.package-data]
vmex = ["resources/input.nfp4_QH_warm_start"]

[tool.pytest.ini_options]
markers = [
  "full: slower/full-physics tests; set RUN_FULL=1 to run",
  "gpu: tests that require a real GPU; skipped when no GPU is available",
  "vmec2000_live: opt-in integration tests requiring a local VMEC2000 executable",
]

[tool.coverage.run]
# freeboundary_diff.py is optional (vmex[freeb]) and requires
# virtual_casing_jax, a uwplasma package not on PyPI; its FD-validated
# gradient tests are importorskip-gated and skip in the core CI, so the module
# is excluded from the core >=95% coverage gate.  It IS exercised when the
# freeb extra is installed (locally / a dedicated freeb CI lane — R15.3/R19
# follow-up).
omit = ["*/freeboundary_diff.py", "*/turbulence.py"]

[tool.coverage.report]
omit = ["*/freeboundary_diff.py", "*/turbulence.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402: module-level import not at top-of-file.  Deferred imports (after env
#        setup / jax.config calls) are deliberate to control JAX initialisation.
# E501: line too long.  Handled by the line-length setting above; long lines in
#        ported Fortran-style code are acceptable.
# E702: semicolons as statement separators in tightly coupled numerical
#        kernels, common in ported Fortran code.
ignore = ["E402", "E501", "E702"]

[tool.mypy]
# Note: recent numpy stubs use PEP 695 `type` statements, so the checked
# python_version cannot be pinned below 3.12.
ignore_missing_imports = true
# With full defaults the core trips 38 errors in 11 files, all jax.Array /
# ndarray-typing false positives (mypy sees opaque jax.Array where numpy
# overloads are annotated).  Disabled codes shrunk from the legacy 14-code
# blanket to the 8 the core actually needs; name-defined, valid-type,
# call-arg, misc, type-arg, no-any-return and override are enabled again.
disable_error_code = ["operator", "union-attr", "assignment", "arg-type", "index", "return-value", "list-item", "attr-defined"]
